# books-api

./: db.sqlite3  pyproject.toml  requirements.txt
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
backendapi/: settings.py
