[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["salehmmasri <salehalmasri494@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.12.2"
django-cors-headers = "^3.6.0"
django = "^3.1.5"
psycopg2 = "^2.8.6"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
django = "^3.1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
